src/main/java/com/example/demo/exceptions/errors/FileNotFoundException.java
package com.example.demo.exceptions.errors;

public class FileNotFoundException extends RuntimeException {
    public FileNotFoundException(String message) {
        super(message);
    }

    public FileNotFoundException() {
    }
}
